[project]
name = "postgis-db-setup"
version = "0.1.1"
description = "Postgis DB setup."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gdal>=3.12.2",
    "geoalchemy2>=0.18.3",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-utils>=0.42.1",
    "sqlmodel>=0.0.37",
]

[[tool.uv.index]]
url = "https://gisidx.github.io/gwi"

[tool.uv.sources]
gdal = { url = "https://github.com/cgohlke/geospatial-wheels/releases/download/v2026.2.26/gdal-3.12.2-cp314-cp314-win_amd64.whl" }

[tool.ruff.format]
line-ending = "cr-lf"
